# onym-relayer

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  relayers.json  run.sh
.github/workflows/: release.yml
scripts/: deploy-digitalocean.sh  deploy-droplet.sh  generate-contract-allowlist.py  validate-relayers-manifest.py
src/: config.rs  handler.rs  main.rs  manifest.rs  validation.rs
