[package]
name = "onym-relayer"
version = "0.1.0"
edition = "2021"
description = "Standalone HTTP relayer for Onym Soroban contracts"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["limit"] }
base64 = "0.22"
hex = "0.4"
